force-app/main/default/objects/KB_Assessment_Run__c/KB_Assessment_Run__c.object-meta.xml
<CustomObject>
    <description>Master record for a KB readiness assessment session</description>
    <label>KB Assessment Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Assessment Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>