force-app/main/default/objects/KB_Assessment_Run__c/fields/Assessment_Types__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Types__c</fullName>
    <description>Selected assessment types for this run.</description>
    <label>Assessment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Readiness</fullName>
                <default>true</default>
                <label>Readiness</label>
            </value>
            <value>
                <fullName>Deduplication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>