force-app/main/default/objects/KB_Assessment_Run__c/fields/Async_Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Ids__c</fullName>
    <description>Comma-separated AsyncApexJob Ids captured at dispatch time (KBAssessmentDimensionQueueable, KBAssessmentBatch, Tier2/3/4, KBAssessmentPipelineCallback). Consumed by KBAssessmentService.cancelAssessmentRun to call System.abortJob on each pending job.</description>
    <label>Async Job Ids</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>