force-app/main/default/objects/KB_Assessment_Run__c/fields/Cancellation_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested_At__c</fullName>
    <description>Timestamp when a user requested cancellation of this run via cancelAssessmentRun. Stamped before the abortJob loop runs, so it lets the UI show a "Cancelling..." state between request and the next status read.</description>
    <label>Cancellation Requested At</label>
    <type>DateTime</type>
</CustomField>