force-app/main/default/objects/KB_Assessment_Run__c/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <description>User who requested cancellation of this run via cancelAssessmentRun. Audit trail surfaced on the History tab.</description>
    <label>Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cancelled Assessment Runs</relationshipLabel>
    <relationshipName>Cancelled_Assessment_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>