force-app/main/default/objects/KB_Assessment_Run__c/fields/Clarity_Score__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Score__c</fullName>
    <description>Aggregate Clarity dimension score across all articles in this run.</description>
    <inlineHelpText>Average Clarity score for all articles (0-100).</inlineHelpText>
    <label>Clarity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>