force-app/main/default/objects/KB_Assessment_Run__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>Timestamp when the assessment run completed</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>