force-app/main/default/objects/KB_Assessment_Run__c/fields/Completed_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Completed_Dimensions__c</fullName>
    <description>CSV of dimension DeveloperNames that have finished for this run. Each KBAssessmentDimensionQueueable appends its name under FOR UPDATE lock on completion. Finalization fires when this equals Dispatched_Dimensions__c.</description>
    <label>Completed Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>