force-app/main/default/objects/KB_Assessment_Run__c/fields/Completeness_Score__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score__c</fullName>
    <description>Aggregate Completeness dimension score across all articles in this run.</description>
    <inlineHelpText>Average Completeness score for all articles (0-100).</inlineHelpText>
    <label>Completeness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>