force-app/main/default/objects/KB_Assessment_Run__c/fields/Conflict_Score__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Score__c</fullName>
    <description>Aggregate Conflict dimension score across all articles in this run.</description>
    <inlineHelpText>Average Conflict score for all articles (0-100).</inlineHelpText>
    <label>Conflict Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>