force-app/main/default/objects/KB_Assessment_Run__c/fields/Deployment_Tier__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Tier__c</fullName>
    <description>Deployment complexity tier based on KB quality and maturity.</description>
    <inlineHelpText>Deployment difficulty: Easy, Medium, or Hard.</inlineHelpText>
    <label>Deployment Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>