force-app/main/default/objects/KB_Assessment_Run__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional user-supplied description for the assessment run, captured on the "Assessment details" step of the new-assessment flow. Free-text context to help users identify a run alongside Run_Name__c.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>