force-app/main/default/objects/KB_Assessment_Run__c/fields/Dispatched_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Dimensions__c</fullName>
    <description>CSV of dimension DeveloperNames the facade dispatched for this run (e.g. "Completeness,Structure,Clarity,Freshness,Duplication,Conflict"). Compared against Completed_Dimensions__c in finalization to detect the last worker.</description>
    <label>Dispatched Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>