force-app/main/default/objects/KB_Assessment_Run__c/fields/Duplication_Score__c.field-meta.xml
<CustomField>
    <fullName>Duplication_Score__c</fullName>
    <description>Aggregate Duplication dimension score across all articles in this run.</description>
    <inlineHelpText>Average Duplication score for all articles (0-100).</inlineHelpText>
    <label>Duplication Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>