force-app/main/default/objects/KB_Assessment_Run__c/fields/Effective_Weights_JSON__c.field-meta.xml
<CustomField>
    <fullName>Effective_Weights_JSON__c</fullName>
    <description>JSON object containing renormalized effective dimension weights used for this run.</description>
    <label>Effective Weights JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>