force-app/main/default/objects/KB_Assessment_Run__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <description>JSON blob storing the filter selections applied to this assessment run.</description>
    <inlineHelpText>Stores article filters and selection criteria as JSON.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>