force-app/main/default/objects/KB_Assessment_Run__c/fields/Filter_DSL_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_DSL_JSON__c</fullName>
    <description>JSON payload for safe advanced filter DSL used by this run.</description>
    <label>Filter DSL JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>