force-app/main/default/objects/KB_Assessment_Run__c/fields/Freshness_Score__c.field-meta.xml
<CustomField>
    <fullName>Freshness_Score__c</fullName>
    <description>Aggregate Freshness dimension score across all articles in this run.</description>
    <inlineHelpText>Average Freshness score for all articles (0-100).</inlineHelpText>
    <label>Freshness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>