force-app/main/default/objects/KB_Assessment_Run__c/fields/KB_Maturity_Tier__c.field-meta.xml
<CustomField>
    <fullName>KB_Maturity_Tier__c</fullName>
    <description>KB maturity classification based on article count and quality variance.</description>
    <inlineHelpText>Maturity tier: Blank Slate, Early Adopter, Legacy KB, or Mixed Quality.</inlineHelpText>
    <label>KB Maturity Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank Slate</fullName>
            </value>
            <value>
                <fullName>Early Adopter</fullName>
            </value>
            <value>
                <fullName>Legacy KB</fullName>
            </value>
            <value>
                <fullName>Mixed Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>