force-app/main/default/objects/KB_Assessment_Run__c/fields/Needs_Work_Count__c.field-meta.xml
<CustomField>
    <fullName>Needs_Work_Count__c</fullName>
    <description>Number of articles with Needs Work status (score 50-79)</description>
    <label>Needs Work Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>