force-app/main/default/objects/KB_Assessment_Run__c/fields/Not_Ready_Count__c.field-meta.xml
<CustomField>
    <fullName>Not_Ready_Count__c</fullName>
    <description>Number of articles with Not Ready status (score below 50)</description>
    <label>Not Ready Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>