force-app/main/default/objects/KB_Assessment_Run__c/fields/Org_Size_Segment__c.field-meta.xml
<CustomField>
    <fullName>Org_Size_Segment__c</fullName>
    <description>Org size segment based on total KB article count.</description>
    <inlineHelpText>Org size: SMB, Mid-Market, or Enterprise based on article volume.</inlineHelpText>
    <label>Org Size Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>