force-app/main/default/objects/KB_Assessment_Run__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Average score across all assessed articles</description>
    <label>Overall Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>