force-app/main/default/objects/KB_Assessment_Run__c/fields/Pipeline_Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Duration_Ms__c</fullName>
    <description>Wall-clock milliseconds spent in the dedup pipeline (Tier2 → Tier3 → Tier4 + trampoline gap → callback start). Stamped by KBAssessmentPipelineCallback. Null when no dedup requested.</description>
    <label>Pipeline Duration (ms)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>