force-app/main/default/objects/KB_Assessment_Run__c/fields/Pipeline_Run__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Run__c</fullName>
    <description>Linked pipeline operations run record.</description>
    <label>Pipeline Run</label>
    <referenceTo>KB_Pipeline_Run__c</referenceTo>
    <relationshipLabel>Assessment Runs</relationshipLabel>
    <relationshipName>Assessment_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>