force-app/main/default/objects/KB_Assessment_Run__c/fields/Ready_Count__c.field-meta.xml
<CustomField>
    <fullName>Ready_Count__c</fullName>
    <description>Number of articles with Ready status (score &gt;= 80)</description>
    <label>Ready Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>