force-app/main/default/objects/KB_Assessment_Run__c/fields/Requested_Scope__c.field-meta.xml
<CustomField>
    <fullName>Requested_Scope__c</fullName>
    <defaultValue>'Selected'</defaultValue>
    <description>Requested scope for this run.</description>
    <label>Requested Scope</label>
    <length>40</length>
    <type>Text</type>
</CustomField>