force-app/main/default/objects/KB_Assessment_Run__c/fields/Run_Name__c.field-meta.xml
<CustomField>
    <fullName>Run_Name__c</fullName>
    <description>User-supplied name for the assessment run, captured on the "Assessment details" step of the new-assessment flow. Mandatory in the UI/controller; left optional at the metadata level because runs are inserted from async (queueable/batch) contexts where a hard field-required would break DML. Surfaces in the All Assessments list with the auto-number Name as a fallback when blank.</description>
    <label>Run Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>