force-app/main/default/objects/KB_Assessment_Run__c/fields/Scan_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Scan_Start_Time__c</fullName>
    <description>Timestamp when the assessment scan was initiated.</description>
    <inlineHelpText>When this assessment run was started.</inlineHelpText>
    <label>Scan Start Time</label>
    <type>DateTime</type>
</CustomField>