force-app/main/default/objects/KB_Assessment_Run__c/fields/Scoring_Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Duration_Ms__c</fullName>
    <description>Wall-clock milliseconds spent scoring all dimensions across all articles (run.CreatedDate → dispatcher handoff). Stamped by KBAssessmentPipelineDispatcher.</description>
    <label>Scoring Duration (ms)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>