force-app/main/default/objects/KB_Assessment_Run__c/fields/Scoring_Shards_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Shards_Outstanding__c</fullName>
    <description>Join-barrier counter for parallel scoring batch shards (>50-article path). Seeded by KBAssessmentService.dispatchBatch with the number of concurrent KBAssessmentBatch shards; each shard's finish() decrements it under FOR UPDATE. The shard that decrements it to 0 is last-done and dispatches pipeline finalization. Null/0 means the single-batch (legacy) path, where finish() dispatches finalization directly.</description>
    <label>Scoring Shards Outstanding</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>