force-app/main/default/objects/KB_Assessment_Run__c/fields/Selected_Dimensions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Selected_Dimensions_JSON__c</fullName>
    <description>JSON array of selected readiness dimensions for this run.</description>
    <label>Selected Dimensions JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>