force-app/main/default/objects/KB_Assessment_Run__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <description>Last status message published for this run. Populated by KBAssessmentPipelineCallback on terminal Failed transitions; consumed by the runner LWC's safety-net poll to mirror the live Platform Event channel's reason. Empty on Completed runs.</description>
    <label>Status Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>