force-app/main/default/objects/KB_Assessment_Run__c/fields/Structure_Score__c.field-meta.xml
<CustomField>
    <fullName>Structure_Score__c</fullName>
    <description>Aggregate Structure dimension score across all articles in this run.</description>
    <inlineHelpText>Average Structure score for all articles (0-100).</inlineHelpText>
    <label>Structure Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>