force-app/main/default/objects/KB_Assessment_Run__c/fields/Tier4_Lanes_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Tier4_Lanes_Outstanding__c</fullName>
    <description>Join-barrier counter for parallel Tier 4 dedup shards (C). Seeded by Tier3DispatchQueueable with the number of concurrent Tier3AgenticBatch shards; each shard's finish() decrements it under FOR UPDATE. The shard that decrements it to 0 is the last one done and enqueues KBAssessmentPipelineCallback. Null means the single-lane legacy path (Tier3AgenticQueueable fires the callback directly).</description>
    <label>Tier 4 Lanes Outstanding</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>