force-app/main/default/objects/KB_Assessment_Run__c/fields/Total_Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_Ms__c</fullName>
    <description>Wall-clock milliseconds from run.CreatedDate → Completed_At__c. Includes scoring + pipeline + any schedulable trampoline gaps. Stamped by KBAssessmentPipelineCallback.</description>
    <label>Total Duration (ms)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>