force-app/main/default/objects/KB_Assessment_Run__c/fields/Used_LLM__c.field-meta.xml
<CustomField>
    <fullName>Used_LLM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Einstein LLM was used for hybrid scoring in this run.</description>
    <inlineHelpText>True if this assessment used LLM-enhanced scoring.</inlineHelpText>
    <label>Used LLM</label>
    <type>Checkbox</type>
</CustomField>